manifest/pihole.yaml
# Service: PiHole
# Ingress: pihole.brhd.io
# Label: app.kubernetes.io/name: pihole
# NOTE: all client IPs are substituted by pod IP due to use of ingress controller
#       consider using 'hostPort' or NodePort with 'ExternalTrafficPolicy=Local"
#       if it's not desired.
---
kind: Namespace
apiVersion: v1
metadata:
  name: pihole
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pihole-ui
#   annotations:
#     io.cilium/lb-ipam-ips: 192.168.1.164
#   labels:
#     app.kubernetes.io/name: pihole
# spec:
#   selector:
#     app.kubernetes.io/name: pihole
#   type: LoadBalancer
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 80
#     - name: https
#       protocol: TCP
#       port: 443
#       targetPort: 443
apiVersion: v1
kind: Service
metadata:
  name: pihole-ui
  annotations:
    io.cilium/lb-ipam-ips: 192.168.1.164
  labels:
    app.kubernetes.io/name: pihole
spec:
  selector:
    app.kubernetes.io/name: pihole
  type: LoadBalancer
  ports:
   - name: http-admin
     protocol: TCP
     port: 80
     targetPort: 80
     path: "/admin"
   - name: https
     protocol: TCP
     port: 443
     targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  annotations:
    io.cilium/lb-ipam-ips: 192.168.1.165
  labels:
    app.kubernetes.io/name: pihole
spec:
  selector:
    app.kubernetes.io/name: pihole
  ports:
    - port: 53
      targetPort: 53
      name: dns-tcp
      protocol: TCP
    - port: 53
      targetPort: 53
      name: dns-udp
      protocol: UDP
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app.kubernetes.io/name: pihole
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: pihole
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pihole
    spec:
      restartPolicy: Always
      containers:
      - name: pihole
        image: pihole/pihole:2024.05.0
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 200Mi
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
          - name: https
            containerPort: 443
            protocol: TCP
          - name: dns-tcp
            protocol: TCP
            containerPort: 53
          - name: dns-udp
            protocol: UDP
            containerPort: 53
        volumeMounts:
          - name: pihole-etc
            mountPath: /etc/pihole
          - name: pihole-dnsmasqd
            mountPath: /etc/dnsmasq.d
      volumes:
        - name: pihole-etc
          persistentVolumeClaim:
            claimName: pihole-etc
        - name: pihole-dnsmasqd
          persistentVolumeClaim:
            claimName: pihole-dnsmasqd
      dnsConfig:
        nameservers:
          - 127.0.0.1
          - 1.1.1.1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: ingress-nginx-internal
  rules:
  - host: pihole.<path:stringreplacesecret#domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-ui
            port:
              number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - "pihole.<path:stringreplacesecret#domain>"
  rules:
  - backendRefs:
    - name: pihole-ui
      port: 80
